syntax = "proto3";

package dev.httpmarco.polocloud.explanation;


message EmptyCall {
}